--- a/client/src/css/style.css
+++ b/client/src/css/style.css
@@ -33,6 +33,11 @@ h5 {
     overflow-y: scroll
 }
 
+.azienda:hover{
+    cursor: pointer;
+    color: #F90200;
+}
+
 .azienda:first-child{
     border-top: 1px solid #eeeeee
 }
@@ -172,3 +177,52 @@ input[type=text] {
 input[type=text]:focus {
     width: 100%;
 }
+
+
+/* ricerca filtrata delle proposte*/
+/* the button that is used to open and close the collapsible content */
+.collapsible {
+    background-color: #eee;
+    color: #444;
+    cursor: pointer;
+    padding: 18px;
+    width: 100%;
+    border: none;
+    text-align: left;
+    outline: none;
+    font-size: 15px;
+  }
+  
+  /* Add a background color to the button if it is clicked on (add the .active class with JS), and when you move the mouse over it (hover) */
+  .active, .collapsible:hover {
+    background-color: #ccc;
+  }
+  
+  /* Style the collapsible content. Note: hidden by default */
+  .content {
+    padding: 0 18px;
+    display: none;
+    overflow: hidden;
+    background-color: #f1f1f1;
+  }
+
+  .collapsible:after {
+    content: '\02795'; /* Unicode character for "plus" sign (+) */
+    font-size: 13px;
+    color: white;
+    float: right;
+    margin-left: 5px;
+}
+
+.active:after {
+    content: "\2796"; /* Unicode character for "minus" sign (-) */
+}
+
+
+.search-form{
+    font-size: 18px;
+    font-weight: 500;
+    transition: .2s all ease-in;
+    opacity: .8;
+}
+
