--- a/client/src/css/style.css
+++ b/client/src/css/style.css
@@ -1,29 +1,41 @@
-html,
-body,
-h1
-h2,
-h3,
-h4,
-h5 {
+* {
     font-family: "Open Sans", sans-serif
 }
 
-    
-
-
-.titolo-aziende{
-    color:#822627;
-    font-size: 20px;
-
+html{
+    margin: auto;
+    max-width:1500px;
 }
 
-.page-container-aziende{
-    margin-top:70px;
+/* Useful in different parts */
+.no-padding{
+    padding: 0 !important;
 }
 
 .univaq-color{
     background-color: #822627;
     color: #ffffff
+}
+/* End useful in different parts */
+
+/* Column management */
+#left-column{
+    width: 20%
+}
+
+#middle-column{
+    width: 80%;
+}
+
+.page-container{
+    margin-left: 8%;
+    margin-right: 8%;
+}
+/* End column management */
+
+.titolo-aziende{
+    color:#822627;
+    font-size: 20px;
 }
 
 .profile-container{
@@ -39,7 +51,8 @@ h5 {
 
 .azienda:hover{
     cursor: pointer;
-    color: #F90200;
+    /* color: #F90200; */
+    color: #822627;
 }
 
 .azienda:first-child{
@@ -66,6 +79,10 @@ h5 {
     color: #822627;
 }
 
+.azienda:last-child{
+    padding-bottom: 10px;
+}
+
 .w3-container.margin-bottom .w3-center{
     font-size: 100%;
 }
@@ -76,10 +93,6 @@ h5 {
     margin: 5px 0
 }
 
-.azienda:last-child{
-    padding-bottom: 10px;
-}
-
 .w3-opacity{
     font-size: 18px;
     font-weight: 500;
@@ -88,7 +101,8 @@ h5 {
 }
 
 .w3-opacity:hover{
-    color: #F90200;
+    /* color: F90200; */
+    color: #822627;
     cursor: pointer;
 }
 
@@ -97,12 +111,7 @@ h5 {
 }
 
 .page-container{
-    max-width:1400px;
-    margin-top:80px;
-}
-
-.middle-column{
-    width: 70%;
+    margin: 40px auto auto auto !important;
 }
 
 .proposte-tirocinio{
@@ -118,18 +127,95 @@ h5 {
     margin-bottom: 20px
 }
 
-.w3-col.m7{
-    width: 80%;
+form .w3-button{
+    outline-color: #822627;
+    transition: .2s all ease-in;
+    border-color: #dddeee !important;
+    margin-bottom: 15px
 }
 
-.w3-col.m3, .w3-quarter{
-    width: 20%
+.w3-button:hover{
+    color: #ffffff !important;
+    background-color: #822627 !important
 }
 
-.page-container{
-    margin-left: 8%;
-    margin-right: 8%;
+input.w3-input{
+    margin-top: 5px;
+    margin-bottom: 15px;
+    padding: 5px;
+    outline: none;
+    border-bottom: 1px solid;
+    border-color: #dddeee;
+    transition: all .2s ease-in-out
 }
+
+input.w3-input:focus{
+    border-color: #822627
+}
+
+/* Collapsible research */
+
+#search-bar{
+    padding: 0 16px;
+}
+
+.collapsible-menu{
+    padding: 10px 0;
+}
+
+.collapsible-menu #label-search{
+    font-size: 17px;
+    font-weight: 500;
+    user-select: none;
+}
+
+.collapsible-menu .field-filter{
+    font-size: 14px
+}
+
+input#menu-1,
+input#menu {
+    display: none;
+}
+
+.menu-content-1,
+.menu-content {
+    max-height: 0;
+    overflow: hidden;
+}
+
+.menu-content-1{
+    display: block;
+}
+
+input:checked ~ .menu-content-1,
+input:checked ~ .menu-content {
+    max-height: 100%;
+}
+
+#label-search{
+    cursor: pointer;
+}
+
+#label-search:after {
+    font-family: FontAwesome;
+    content: '\f067'; /* Unicode character for "plus" sign (+) */
+    font-size: 16px;
+    float: right;
+    color: #822627;
+}
+
+input:checked ~ #label-search:after {
+    font-family: FontAwesome;
+    content: "\f068"; /* Unicode character for "minus" sign (-) */
+    color: #822627;
+}
+
+.fa.fa-bars.w3-right{
+    padding-top: 4px
+}
+
+/* End collapsible research */
 
 /* Computer */
 @media (min-device-width: 500px){
@@ -142,23 +228,39 @@ h5 {
 /* Tablet and smartphone */
 @media  (max-width: 701px){
 
-    .profilo,
+    .menu-content-1 ul {
+        list-style-type: none;
+        display: grid;
+    }
+
+    .menu-content-1 ul li{
+        font-size: 16px;
+        padding: 8px 0
+    }
+
+    .menu-content-1 ul li a{
+        padding: 0 !important
+    }
+
+    #left-column,
     .aziende{
         display: none;
     }
 
     .margin-bottom{
         margin-bottom: 30px
-        
+    }
+
+    #search-bar{
+        padding: 0;
     }
 
     .page-container{
-        margin-left: 0;
-        margin-right: 0;
+        margin-top: 20px !important
     }
 
-    .w3-col.m7,
-    .w3-col.m3, .w3-quarter{
+    #left-column,
+    #middle-column{
         width: 100%;
     }
 
@@ -168,65 +270,5 @@ h5 {
         padding-right: 0;
     }
     
-}
-
-/*form ricerca*/
-input[type=text] {
-    width: 130px;
-    -webkit-transition: width 0.4s ease-in-out;
-    transition: width 0.4s ease-in-out;
-}
-
-/* When the input field gets focus, change its width to 100% */
-input[type=text]:focus {
-    width: 100%;
-}
-
-
-/* ricerca filtrata delle proposte*/
-/* the button that is used to open and close the collapsible content */
-.collapsible {
-    background-color: #eee;
-    color: #444;
-    cursor: pointer;
-    padding: 18px;
-    width: 100%;
-    border: none;
-    text-align: left;
-    outline: none;
-    font-size: 15px;
-  }
-  
-  /* Add a background color to the button if it is clicked on (add the .active class with JS), and when you move the mouse over it (hover) */
-  .active, .collapsible:hover {
-    background-color: #ccc;
-  }
-  
-  /* Style the collapsible content. Note: hidden by default */
-  .content {
-    padding: 0 18px;
-    display: none;
-    overflow: hidden;
-    background-color: #f1f1f1;
-  }
-
-  .collapsible:after {
-    content: '\02795'; /* Unicode character for "plus" sign (+) */
-    font-size: 13px;
-    color: white;
-    float: right;
-    margin-left: 5px;
-}
-
-.active:after {
-    content: "\2796"; /* Unicode character for "minus" sign (-) */
-}
-
-
-.search-form{
-    font-size: 18px;
-    font-weight: 500;
-    transition: .2s all ease-in;
-    opacity: .8;
 }
 
