Added servlet for company details

--- a/IntershipTutor/WebContent/templates/container.ftl.html
+++ b/IntershipTutor/WebContent/templates/container.ftl.html
@@ -7,8 +7,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.2.0/css/all.css">
     <link rel="stylesheet" href="style/w3.css">
-    <link href="style/style.css" rel="stylesheet">
+    <link href="style/container.css" rel="stylesheet">
+    <link href="style/${page_css}.css" rel="stylesheet">
     <script src="js/index.js"></script>
     
 </head>
@@ -16,7 +18,7 @@
 <body class="w3-theme-l5">
 
 	<!-- NAVBAR PC -->
-	<div class="w3-bar univaq-color w3-left-align w3-large w3-padding-large w3-hide-small">
+	<div class="w3-bar univaq-color-background w3-left-align w3-large w3-padding-large w3-hide-small">
 	    <a href="#" class="w3-bar-item w3-button no-padding">
 	        <i class="fa fa-home"></i>
 	        IntershipTutor
@@ -29,7 +31,7 @@
 	
 	
 	<!-- NAVBAR MOBILE -->
-	<div class="w3-bar univaq-color w3-left-align w3-large  w3-hide-medium">
+	<div class="w3-bar univaq-color-background w3-left-align w3-large  w3-hide-medium">
 	    <div class="collapsible-menu-1 w3-padding-large w3-hide-large">
 	            <i class="fa fa-home w3-margin-right"></i>
 	            IntershipTutor
@@ -50,7 +52,7 @@
     <#include template_to_include>
 
     <!-- FOOTER -->
-    <footer class="w3-container univaq-color w3-padding-16">
+    <footer class="w3-container univaq-color-background w3-padding-16">
         <h5>Footer</h5>
     </footer>
     <!-- Scripts -->
