--- a/IntershipTutor/WebContent/templates/container.ftl.html
+++ b/IntershipTutor/WebContent/templates/container.ftl.html
@@ -8,9 +8,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.2.0/css/all.css">
-    <link rel="stylesheet" href="style/w3.css">
-    <link href="style/container.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
+    <link href="style/${w3_css}.css" rel="stylesheet">
     <link href="style/${page_css}.css" rel="stylesheet">
+    <link href="style/container.css" rel="stylesheet">
     <script src="js/index.js"></script>
     
 </head>
@@ -19,7 +20,7 @@
 
 	<!-- NAVBAR PC -->
 	<div class="w3-bar univaq-color-background w3-left-align w3-large w3-padding-large w3-hide-small">
-	    <a href="#" class="w3-bar-item w3-button no-padding">
+	    <a href="../IntershipTutor" class="w3-bar-item w3-button no-padding">
 	        <i class="fa fa-home"></i>
 	        IntershipTutor
 	    </a>
@@ -45,14 +46,14 @@
 	        </div>
 	    </div>
 	</div>
-
+	<div id="container">
 	<!--------------------------------------
 		 INCLUSIONE TEMPLATE NON STATICO
 	 ---------------------------------------->
     <#include template_to_include>
-
+	</div>
     <!-- FOOTER -->
-    <footer class="w3-container univaq-color-background w3-padding-16">
+    <footer class="w3-container footer univaq-color-background">
         <h5>Footer</h5>
     </footer>
     <!-- Scripts -->
