--- a/IntershipTutor/WebContent/style/container.css
+++ b/IntershipTutor/WebContent/style/container.css
@@ -2,6 +2,17 @@
     font-family: "Open Sans", sans-serif
 }
 
+html,
+body {
+ height: 100%;
+ position: relative;
+ margin: 0
+}
+
+#container{
+	min-height: 100%;
+}
+
 a{
 	text-decoration: none;
 }
