--- a/IntershipTutor/WebContent/templates/container.ftl.html
+++ b/IntershipTutor/WebContent/templates/container.ftl.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.2.0/css/all.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
-    <link href="style/${w3_css}.css" rel="stylesheet">
+    <link href="style/w3.css" rel="stylesheet">
     <link href="style/${page_css}.css" rel="stylesheet">
     <link href="style/container.css" rel="stylesheet">
     <script src="js/index.js"></script>
@@ -47,10 +47,12 @@
 	    </div>
 	</div>
 	<div id="container">
+	
 	<!--------------------------------------
 		 INCLUSIONE TEMPLATE NON STATICO
 	 ---------------------------------------->
     <#include template_to_include>
+    
 	</div>
     <!-- FOOTER -->
     <footer class="w3-container footer univaq-color-background">
