--- a/IntershipTutor/WebContent/templates/dettaglio-azienda.ftl.html
+++ b/IntershipTutor/WebContent/templates/dettaglio-azienda.ftl.html
@@ -1,33 +1,26 @@
 
 <!-- Page Container -->
-<div class="w3-content w3-margin-top" style="max-width:1400px;">
+<div id="dettaglio-azienda-container" class="w3-content w3-margin-top">
 
   <!-- The Grid -->
   <div class="w3-row-padding">
   
     <!-- Left Column -->
-    <div class="w3-third">
+    <div class="w3-quarter">
     
-      <div class="w3-white w3-text-grey w3-card-4">
-        <div class="w3-display-container">
-          <i class="material-icons" style="font-size:200px; text-align:center; width:100%">person</i>
-          <div class="w3-display-bottomleft w3-container w3-text-black">
-            <h2 style="color:#822627; line-height:7px;">${azienda.nome}</h2>
-          </div>
-        </div>
-        <div class="w3-container">
+      <div class="w3-white w3-text-grey w3-card-4 w3-round">
+        <div class="w3-container w3-padding">
+          <h2 id="nome-azienda">${azienda.nome}</h2>
+          <hr />
           <p><i class="fa fa-briefcase fa-fw w3-margin-right w3-large w3-text-teal"></i>${azienda.nomeRappresentante} ${azienda.cognomeRappresentante}</p>
           <p><i class="fa fa-home fa-fw w3-margin-right w3-large w3-text-teal"></i>${azienda.regione}</p>
           <p><i class="fa fa-envelope fa-fw w3-margin-right w3-large w3-text-teal"></i>${azienda.email}</p>
-          <p><i class="fa fa-phone fa-fw w3-margin-right w3-large w3-text-teal"></i>${azienda.telefono}</p>
-          <hr>
-
-          
+          <p><i class="fa fa-phone fa-fw w3-margin-right w3-large w3-text-teal"></i>${azienda.telefono}</p> 
         </div>
         
         
       </div><br>
-		<p class="w3-large"><b><i class="fa fa-chart-bar fa-fw w3-margin-right w3-text-teal"  style = "font-size:25px"></i>Valutazione</b></p>
+		<p class="w3-large"><b><i class="fa fa-chart-bar fa-fw w3-margin-right w3-text-teal"></i>Valutazione</b></p>
           <p class ="w3-text-grey">Voto</p>
           <div class="w3-light-grey w3-round-xlarge w3-small">
             <div class="w3-container w3-center w3-round-xlarge w3-teal" style="width:${voto}%">${voto/20}</div>
@@ -38,17 +31,20 @@
     </div>
 
     <!-- Right Column -->
-    <div class="w3-twothird">
+    <div class="w3-threequarter">
     
       <div class="w3-container w3-card w3-white w3-margin-bottom">
-        <h2 class="w3-text-grey w3-padding-16"><i class="fa fa-suitcase fa-fw w3-margin-right w3-xxlarge w3-text-teal"></i>Tirocini disponibili</h2>
+        <h2 id="tirocini-disponibili" class="w3-text-grey w3-padding-16">
+        	<i class="fa fa-suitcase fa-fw w3-margin-right w3-xlarge w3-text-teal"></i>
+        	Tirocini disponibili
+        </h2>
         <#list tirocini as tirocinio>
-        <div class="w3-container">
-          <h5 class="w3-opacity"><b>Tirocinio ${tirocinio.idTirocinio}</b></h5>
-          <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Jan 2015 - <span class="w3-tag w3-teal w3-round">Current</span></h6>
-          <p>Lorem ipsum dolor sit amet. Praesentium magnam consectetur vel in deserunt aspernatur est reprehenderit sunt hic. Nulla tempora soluta ea et odio, unde doloremque repellendus iure, iste.</p>
-          <hr>
-        </div>
+	        <div class="w3-container">
+	        <hr>
+	          <h5 class="w3-opacity"><b>Tirocinio ${tirocinio.idTirocinio}</b></h5>
+	          <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Jan 2015 - <span class="w3-tag w3-teal w3-round">Current</span></h6>
+	          <p class="descrizione-tirocinio">Lorem ipsum dolor sit amet. Praesentium magnam consectetur vel in deserunt aspernatur est reprehenderit sunt hic. Nulla tempora soluta ea et odio, unde doloremque repellendus iure, iste.</p>
+	        </div>
         </#list>
         
       </div>
