--- a/IntershipTutor/WebContent/templates/homepage.ftl.html
+++ b/IntershipTutor/WebContent/templates/homepage.ftl.html
@@ -1,104 +1,134 @@
 <!-- Page Container -->
-<div id="homepage-container" class="w3-container w3-content">
+<div id="homepage-container" class="w3-content">
 
-   <!-- Left Column -->
-   <div class="w3-quarter" id="left-column">
-       <!-- Profile -->
-       <div class="w3-card w3-round w3-white">
-           <div class="w3-container profile-container">
-               <h4 class="w3-center">Stefano Martella</h4>
-               <hr>
-               <p>
-                   <i class="fa fa-pencil fa-fw w3-margin-right w3-text-theme"></i>Informatica
-               </p>
-               <p>
-                   <i class="fa fa-home fa-fw w3-margin-right w3-text-theme"></i>L'Aquila
-               </p>
-               <p>
-                   <i class="fa fa-birthday-cake fa-fw w3-margin-right w3-text-theme"></i>14 Giugno 1996
-               </p>
-           </div>
-       </div>
+  <!-- The Grid -->
+  <div class="w3-row-padding">
 
-       <div class="w3-card w3-round w3-white">
-           <p id="aziende-convenzionate">Aziende convenzionate</p>
-           <div class="w3-container margin-bottom aziende">
-               <#list aziende as azienda>
-               	   <hr>
-                   <div class="azienda">
-                    <a href="azienda?azienda=${azienda.codiceFiscale}">
-                        <h4 class="w3-center">${azienda.nome}</h4>
-                        <p class="info">${azienda.regione}</p>
-                        <p class="info">${azienda.telefono}</p>
-                    </a>
-                   </div>
-               </#list>
-           </div>
-       </div>
+	   <!-- Left Column -->
+	   <div class="w3-quarter" id="left-column">
+	       <!-- Profile -->
+	       <div class="w3-card w3-round w3-white">
+	           <div class="w3-container profile-container">
+	               <h4 class="w3-center">Stefano Martella</h4>
+	               <hr>
+	               <p>
+	                   <i class="fa fa-pencil fa-fw w3-margin-right w3-text-theme"></i>Informatica
+	               </p>
+	               <p>
+	                   <i class="fa fa-home fa-fw w3-margin-right w3-text-theme"></i>L'Aquila
+	               </p>
+	               <p>
+	                   <i class="fa fa-birthday-cake fa-fw w3-margin-right w3-text-theme"></i>14 Giugno 1996
+	               </p>
+	           </div>
+	       </div>
+	
+	       <div class="w3-card w3-round w3-white">
+	           <p id="aziende-convenzionate">Aziende convenzionate</p>
+	           <div class="w3-container aziende" id="aziende-container">
+	               <#list aziende as azienda>
+	               	   <hr>
+	                   <div class="azienda w3-padding">
+	                    <a href="azienda?azienda=${azienda.codiceFiscale}">
+	                        <h4>
+	                        	<i class="far fa-building fa-fw w3-margin-right univaq-color"></i> 
+	                        	${azienda.nome}
+	                        </h4>
+	                        <p class="info">
+	                        	<i class="fas fa-map-marked-alt fa-fw w3-margin-right univaq-color"></i>
+	                        	${azienda.regione}
+	                        </p>
+	                        <p class="info">
+	                        	<i class="fas fa-phone fa-fw w3-margin-right univaq-color"></i>
+	                        	${azienda.telefono}
+	                        </p>
+	                    </a>
+	                   </div>
+	               </#list>
+	           </div>
+	       </div>
+	   </div>
+	
+	   <!-- End Left Column -->
+	
+	   <!-- Middle Column -->
+	   <div class="w3-threequarter" id="right-column">
+	
+	         <div id="search-bar">
+	             <div class="w3-card w3-round w3-white">
+	                 <div class="w3-container intership">
+	                     <div class="search-form collapsible-menu">
+	                      <input type="checkbox" id="menu" />
+	                      <label id="label-search" for="menu">Filtra le proposte di tirocinio</label>
+	                      <div class="menu-content">
+	                          <br /><br />
+	                          <form action="">
+	                          <#list campiRicerca as campoRicerca>
+	                              <label class="field-filter">${campoRicerca?capitalize}</label>
+	                              <input class="w3-input" />
+	                          </#list>
+	                          <button class="w3-button w3-right w3-border w3-round">Cerca</button>
+	                          </form>
+	                      </div>
+	                 	</div>
+	             	</div>
+	         	</div>
+	     	</div>
+	       
+	       <div id="offerte-container" class="w3-margin-top w3-margin-bottom w3-card w3-round w3-white w3-padding">
+				<h2 id="tirocini-disponibili" class="w3-text-grey w3-padding-16">
+					<i class="fas fa-book-reader fa-fw w3-margin-right w3-xlarge"></i>
+					Tirocini disponibili
+				</h2>
+				<#list offerte as offerta>
+					<hr />
+					<div class="w3-padding w3-container">
+						<hr>
+						<a href="offertaTirocinio?offertaTirocinio=${offerta.idTirocinio}">
+							<h6 class="w3-opacity">
+							<#if offerta.titolo?length &lt; 150>
+								${offerta.titolo}
+							<#else>
+								${offerta.titolo?substring(0,150)}...
+							</#if>
+							</h6>
+						</a>
+						<p class="univaq-color luogo-tirocinio">
+							<i class="fas fa-map-marker-alt fa-fw w3-margin-right"></i>
+							 ${offerta.luogo}
+						</p>
+						<p class="univaq-color data-tirocinio">
+							<i class="fa fa-calendar fa-fw w3-margin-right"></i>
+							Dal ${offerta.dataInizio} al ${offerta.dataFine}
+						</p>
+						<p  class="proposte-tirocinio">
+						    <#if offerta.modalita?length &lt; 500>
+						        ${offerta.modalita}
+						    <#else>
+						        ${offerta.modalita?substring(0,500)}...
+						    </#if>
+						</p>
+					 </div>
+				</#list>
+		        
+		      </div>
+	       
+	       <!-- Pagination -->
+	       <div class="w3-center">
+	           <div id="pagination" class="w3-bar w3-border">
+	               <a href="#" class="w3-button w3-hover-univaq-color-background">&laquo;</a>
+	               <a href="#" class="w3-button w3-hover-univaq-color-background">1</a>
+	               <a href="#" class="w3-button w3-hover-univaq-color-background">2</a>
+	               <a href="#" class="w3-button w3-hover-univaq-color-background">3</a>
+	               <a href="#" class="w3-button w3-hover-univaq-color-background">4</a>
+	               <a href="#" class="w3-button w3-hover-univaq-color-background">5</a>
+	               <a href="#" class="w3-button w3-hover-univaq-color-background">&raquo;</a>
+	           </div>
+	       </div>
+	
+	   </div>
+   
    </div>
-
-   <!-- End Left Column -->
-
-   <!-- Middle Column -->
-   <div class="w3-threequarter" id="right-column">
-
-         <div id="search-bar">
-             <div class="w3-card w3-round w3-white">
-                 <div class="w3-container intership">
-                     <div class="search-form collapsible-menu">
-                      <input type="checkbox" id="menu" />
-                      <label id="label-search" for="menu">Filtra le proposte di tirocinio</label>
-                      <div class="menu-content">
-                          <br /><br />
-                          <form action="">
-                          <#list campiRicerca as campoRicerca>
-                              <label class="field-filter">${campoRicerca?capitalize}</label>
-                              <input class="w3-input" />
-                          </#list>
-                          <button class="w3-button w3-right w3-border w3-round">Cerca</button>
-                          </form>
-                      </div>
-                 	</div>
-             	</div>
-         	</div>
-     	</div>
-
-       <#list offerte as offerta>
-           <div class="w3-padding offerte">
-               <div class="w3-card w3-round w3-white">
-                   <div class="w3-container intership">
-                       <h6 class="w3-opacity">
-                           <#if offerta.obiettivi?length &lt; 150>
-                               ${offerta.obiettivi}
-                           <#else>
-                               ${offerta.obiettivi?substring(0,150)}...
-                           </#if>
-                       </h6>
-                       <p  class="w3-border w3-padding proposte-tirocinio">
-                           <#if offerta.modalita?length &lt; 500>
-                               ${offerta.modalita}
-                           <#else>
-                               ${offerta.modalita?substring(0,500)}...
-                           </#if>
-                       </p>
-                   </div>
-               </div>
-           </div>
-       </#list>
-       
-       <!-- Pagination -->
-       <div class="w3-center">
-           <div class="w3-bar w3-border pagination">
-               <a href="#" class="w3-button w3-hover-univaq-color-background">&laquo;</a>
-               <a href="#" class="w3-button w3-hover-univaq-color-background">1</a>
-               <a href="#" class="w3-button w3-hover-univaq-color-background">2</a>
-               <a href="#" class="w3-button w3-hover-univaq-color-background">3</a>
-               <a href="#" class="w3-button w3-hover-univaq-color-background">4</a>
-               <a href="#" class="w3-button w3-hover-univaq-color-background">5</a>
-               <a href="#" class="w3-button w3-hover-univaq-color-background">&raquo;</a>
-           </div>
-       </div>
-
-   </div>
+   <!-- End grid -->
         
 </div>
