--- a/IntershipTutor/WebContent/templates/container.ftl.html
+++ b/IntershipTutor/WebContent/templates/container.ftl.html
@@ -16,32 +16,32 @@
     
 </head>
 
-<body class="w3-theme-l5">
+<body>
 
 	<!-- NAVBAR PC -->
-	<div class="w3-bar univaq-color-background w3-left-align w3-large w3-padding-large w3-hide-small">
-	    <a href="../IntershipTutor" class="w3-bar-item w3-button no-padding">
-	        <i class="fa fa-home"></i>
+	<div class="w3-bar univaq-color-background w3-large w3-padding-large w3-hide-small">
+	    <a href="../IntershipTutor" class="w3-bar-item no-padding">
+	        <i class="fa fa-home w3-margin-right univaq-color-background"></i>
 	        IntershipTutor
 	    </a>
-	    <a href="#" class="w3-bar-item w3-button w3-right no-padding">
-	        <i class="fa fa-user"></i>
+	    <a href="#" class="w3-bar-item w3-right no-padding">
 	        Accedi
+	        <i class="fa fa-user w3-margin-left univaq-color-background"></i>
 	    </a>
 	</div>
 	
 	
 	<!-- NAVBAR MOBILE -->
-	<div class="w3-bar univaq-color-background w3-left-align w3-large  w3-hide-medium">
+	<div class="w3-bar univaq-color-background w3-large  w3-hide-medium">
 	    <div class="collapsible-menu-1 w3-padding-large w3-hide-large">
-	            <i class="fa fa-home w3-margin-right"></i>
+	            <i class="fa fa-home w3-margin-right univaq-color-background"></i>
 	            IntershipTutor
 	            <input type="checkbox" id="menu-1">
-	            <label for="menu-1"><i class="fa fa-bars w3-right"></i></label>
+	            <label for="menu-1"><i class="fa fa-bars w3-right univaq-color-background"></i></label>
 	        <div class="menu-content-1">
 	            <ul>
-	                <li><a href="#" class="w3-bar-item w3-button">Accedi</a></li>
-	                <li><a href="./aziende-smartphone.html" class="w3-bar-item w3-button">Aziende convenzionate</a></li>
+	                <li><a href="#" class="w3-bar-item">Accedi</a></li>
+	                <li><a href="./aziende-smartphone.html" class="w3-bar-item">Aziende convenzionate</a></li>
 	            </ul>                    
 	        </div>
 	    </div>
@@ -51,11 +51,11 @@
 	<!--------------------------------------
 		 INCLUSIONE TEMPLATE NON STATICO
 	 ---------------------------------------->
-    <#include template_to_include>
+    <#include content_tpl>
     
 	</div>
     <!-- FOOTER -->
-    <footer class="w3-container footer univaq-color-background">
+    <footer class="w3-container univaq-color-background">
         <h5>Footer</h5>
     </footer>
     <!-- Scripts -->
