--- a/IntershipTutor/WebContent/style/homepage.css
+++ b/IntershipTutor/WebContent/style/homepage.css
@@ -10,17 +10,6 @@
 	margin-bottom: 0
 }
 
-h2{
-	font-size: 140% !important;
-}
-
-h4{
-	font-size: 105%;
-	margin: 0;
-	font-weight: 500;
-	transition: .2s all ease;
-}
-
 .titolo-aziende{
     color:#822627;
     font-size: 20px;
@@ -32,9 +21,16 @@ h4{
     display: none;
 }
 
-.aziende{
-    max-height: 500px;
-    overflow-y: scroll
+.azienda{
+	padding: 5px 0
+}
+
+.azienda:first-child{
+    border-top: 1px solid #eeeeee
+}
+
+.azienda:last-child{
+    padding-bottom: 10px;
 }
 
 .azienda h4:hover{
@@ -43,12 +39,18 @@ h4{
     color: #822627;
 }
 
-.azienda:first-child{
-    border-top: 1px solid #eeeeee
+.aziende{
+    max-height: 500px;
+    overflow-y: scroll;
+    font-size: 100%;
 }
 
 .aziende::-webkit-scrollbar {
     width: 4px;
+}
+
+.aziende hr{
+	margin: 10px
 }
 
  
@@ -71,38 +73,9 @@ h4{
     border-bottom: 1px solid #eeeeee;
 }
 
-.azienda:last-child{
-    padding-bottom: 10px;
-}
-
-.aziende{
-    font-size: 100%;
-}
-
-.aziende hr{
-	margin: 10px
-}
-
 .info{
-    font-size: 90%;
+    font-size: 14px;
     margin: 8px 0
-}
-
-.w3-opacity{
-    font-size: 18px;
-    font-weight: 500;
-    transition: .2s all ease-in;
-    opacity: .8;
-}
-
-.w3-opacity:hover{
-    /* color: F90200; */
-    color: #822627;
-    cursor: pointer;
-}
-
-.fa-book-reader{
-	color: #822627
 }
 
 .data-tirocinio,
@@ -113,13 +86,6 @@ h4{
 .proposte-tirocinio{
     font-size: 14px;
     line-height: 2
-}
-
-form .w3-button{
-    outline-color: #822627;
-    transition: .2s all ease-in;
-    border-color: #dddeee !important;
-    margin-bottom: 15px
 }
 
 /* Collapsible research */
@@ -180,8 +146,7 @@ form .w3-button{
         width: 100%;
     }
 
-    .w3-row-padding,
-    .w3-col.m12{
+    .w3-row-padding{
         padding-left: 0;
         padding-right: 0;
     }
